# cluster

./: Makefile  README.md  api_endpoints.http  daemon-featboost.yaml  daemon.yaml  go.mod  go.sum  installation_guide.md  job_featboost.yaml  main.go  manager-role-binding.yaml  manager-role.yaml  manager-service-account.yaml  manager.yaml  microk8s-pv-claim.yaml  microk8s-pv-volume.yaml  minimal-ingress.yaml  minio-pv-claim.yaml  minio-pv-volume.yaml  notes.md  pv-claim-gke.yaml  pv-claim.yaml  pv-volume.yaml  rabbit-mq-values.yaml  test.json  wipe-minio.sh
daemon/: daemon.yaml  pv-claim.yaml  pv-volume.yaml
ego-photos-non-iterum/: pv-claim.yaml  pv-volume.yaml
manager/: .env  Cargo.toml  Dockerfile  api_endpoints.http  manager-role.yaml  manager.yaml
manager/src/: error.rs  main.rs
manager/src/pipelines/: combiner.rs  fragmenter.rs  job.rs  mod.rs  pipeline.rs  pipeline_manager.rs  routes.rs
manager/src/pipelines/lifecycle/: actor.rs
manager/src/pipelines/provenance/: models.rs  routes.rs
obs/: job.yaml  limitrange.yaml
obs/ego-photos-non-iterum/: job_ego_photos.yaml
pipeline/: pipeline.go  transformationstep.go
static/: index.html
transformation-step/: Dockerfile  main.py
